Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -27,6 +27,6 @@ content:
         label: "Other Page Heading"
         type: string
       - name: other_image
-        label: "Other Page Image"
+        label: "Food"
         type: image
 
